--- a/notebooks/models/Classifiers .Rmd
+++ b/notebooks/models/Classifiers .Rmd
@@ -1,4 +1,9 @@
 ---
+
+  kernelspec:
+    display_name: Python 3
+    language: python
+    name: python3
 jupyter:
   jupytext:
     text_representation:
@@ -6,7 +11,6 @@ jupyter:
       format_name: rmarkdown
       format_version: '1.0'
       jupytext_version: 1.0.0
-
   kernelspec:
     display_name: Python 3
     language: python
@@ -19,6 +23,7 @@ jupyter:
 ## Import Libraries
 
 ```{python}
+import sys
 import pandas as pd
 import math
 
@@ -34,13 +39,16 @@ from sklearn.metrics import accuracy_score, precision_score, roc_auc_score, aver
 from sklearn.feature_selection import RFECV
 
 from sklearn.calibration import calibration_curve, CalibratedClassifierCV
-from VennABERS import ScoresToMultiProbs
 
 import matplotlib.pyplot as plt
 # %matplotlib notebook
 
 # from costcla.models import CostSensitiveRandomForestClassifier
+# sys.path.insert(0, '/Users/steliosrammos/Documents/Education/Maastricht/DKE-Year3/BachelorThesis/bachelor_thesis/src/models')
 
+from src.models.VennABERS import ScoresToMultiProbs
+
+# Turn off autosave for cleaner version control with jupytext
 # %autosave 0
 ```
 
@@ -51,7 +59,7 @@ The `format` parameters options are: 'numpy_array' or None which returns the pan
 
 ```{python}
 def import_data(format=None):
-    data = pd.read_csv('/Users/steliosrammos/Documents/Education/Maastricht/DKE-Year3/Bachelor Thesis/data/v2/data_merged_2018.csv', sep=';')
+    data = pd.read_csv('/Users/steliosrammos/Documents/Education/Maastricht/DKE-Year3/BachelorThesis/bachelor_thesis/data/processed/data_2018.csv', sep=';')
     # data.head()
     
     X, y, s = None, None, None
@@ -236,7 +244,6 @@ def build_model(X, y, classifier):
     ax.set_ylim([-0.05, 1.05])
     ax.set_title('Calibration plots  (reliability curve)')
     ax.plot([0, 1], [0, 1], "k:", label="Perfectly calibrated")
-#     plt.tight_layout()
     
     # Debug variables
     trial = False
@@ -304,8 +311,7 @@ def build_model(X, y, classifier):
         
         return best_classifier, best_roc_score
     
-    else:
-        return None, None
+    return None, None
 ```
 
 ## Building Classifier S
