--- a/notebooks/diabetes_dataset__experiments/Experiments - Titanic Dataset.Rmd
+++ b/notebooks/diabetes_dataset__experiments/Experiments - Titanic Dataset.Rmd
@@ -12,13 +12,13 @@ jupyter:
     name: python3
 ---
 
-# Experiments Diabetes Dataset
+# Experiments Titanic Dataset
 
 ```{python}
 import pandas as pd
 import numpy as np
 from xgboost import XGBClassifier
-from sklearn.model_selection import StratifiedKFold
+from sklearn.model_selection import StratifiedKFold, KFold, ShuffleSplit
 from sklearn.metrics import roc_auc_score, average_precision_score, brier_score_loss
 from sklearn.model_selection import train_test_split
 ```
@@ -28,15 +28,28 @@ from sklearn.model_selection import train_test_split
 base_path = '/Users/steliosrammos/Documents/Education/Maastricht/DKE-Year3/BachelorThesis/bachelor_thesis/'
 
 # Select dataset
-data = pd.read_csv(base_path+"data/external/diabetes.csv", sep=",")
-
-# # Change class to integer
-map = {'tested_positive': 1, 'tested_negative': 0}
-data["class"] = data["class"].map(map)
+data = pd.read_csv(base_path+"data/external/parkinsons.data", sep=",")
+data = data.drop('name', axis=1)
+data.head()
 ```
 
 ```{python}
+data.columns
+```
+
+```{python}
+status = data['status']
+data = data.drop('status', axis=1)
+data['class'] = status
 data.head()
+```
+
+```{python}
+data.to_csv('/Users/steliosrammos/Documents/Education/Maastricht/DKE-Year3/BachelorThesis/bachelor_thesis/data/external/parkinson.csv', sep=';', index=False)
+```
+
+```{python}
+data['class'].value_counts(True)
 ```
 
 ```{python}
@@ -44,34 +57,10 @@ data.shape
 ```
 
 ```{python}
-test_data = data.iloc[:150,:]
-train_data = data.iloc[150:,:]
-```
-
-```{python}
-test_data.to_csv(base_path+"data/external/test_diabetes.csv", sep=";", index=False)
-train_data.to_csv(base_path+"data/external/train_diabetes.csv", sep=";", index=False)
+data.describe()
 ```
 
 # Unbiased Model
-
-```{python}
-train_data = pd.read_csv(base_path+"data/external/train_diabetes.csv", sep=";")
-test_data = pd.read_csv(base_path+"data/external/test_diabetes.csv", sep=";")
-```
-
-```{python}
-train_data.shape
-```
-
-```{python}
-classifier_s = XGBClassifier(random_state=1)
-```
-
-```{python}
-X_train, y_train = train_data.iloc[:, :-1], train_data.iloc[:, -1]
-X_test, y_test = test_data.iloc[:, :-1], test_data.iloc[:, -1]
-```
 
 ```{python}
 roc_scores = []
@@ -79,7 +68,7 @@ roc_scores = []
 X = data.iloc[:, :-1]
 y = data.iloc[:, -1]
 
-skf = StratifiedKFold(20)
+skf = StratifiedKFold(10)
 
 for train_index, test_index in skf.split(X, y):
     
@@ -92,19 +81,16 @@ for train_index, test_index in skf.split(X, y):
     predicted_probas = classifier_s.predict_proba(X_test)[:, 1]
 
     roc_score = roc_auc_score(y_test, predicted_probas)
+    print(roc_score)
     roc_scores.append(roc_score)
-
-print("ROC: {0:9.4f} \n".format(np.array(roc_scores).mean()))
+    
+print("ROC: {0:9.4f} \n".format(np.array(roc_score).mean()))
 ```
 
 # Biased Model
 
 ```{python}
-# Let's introduce a selection bias
-```
-
-```{python}
-biased_data = train_data.copy()
+biased_data = data.copy()
 
 got_go = pd.Series(np.ones(biased_data.shape[0]))
 biased_data.insert(biased_data.shape[1]-1,value=got_go, column="got_go")
@@ -112,12 +98,16 @@ biased_data.head()
 ```
 
 ```{python}
-biased_data.loc[(biased_data.age < 25) | (biased_data.pedi > 1) | (biased_data.skin == 0), 'got_go'] = 0
-biased_data.loc[(biased_data.age < 25) | (biased_data.pedi > 1) | (biased_data.skin == 0), 'class'] = np.nan
+biased_data.loc[(biased_data['MDVP:Fo(Hz)'] < 120) | (biased_data['MDVP:Flo(Hz)'] > 130), 'got_go'] = 0
+biased_data.loc[(biased_data['MDVP:Fo(Hz)'] < 120) | (biased_data['MDVP:Flo(Hz)'] > 130), 'class'] = np.nan
 ```
 
 ```{python}
 biased_data.shape
+```
+
+```{python}
+biased_data.head()
 ```
 
 ```{python}
@@ -129,26 +119,27 @@ print(unlabeled.shape[0])
 ```
 
 ```{python}
-labeled.head()
-```
-
-```{python}
-X_train = labeled.iloc[:, :-2]
-y_train = labeled.iloc[:, -1]
+X_lbld = labeled.iloc[:, :-2]
+y_lbld = labeled.iloc[:, -1]
 
 roc_scores = []
 pr_scores = []
 brier_scores = []
 
-classifier_s.fit(X_train, y_train)
-predicted_probas = classifier_s.predict_proba(X_test)[:, 1]
-predicted_labels = classifier_s.predict(X_test)
+for train_index, test_index in skf.split(X_lbld, y_lbld):
+    
+    X_train = X_lbld.iloc[train_index]
+    y_train = y_lbld.iloc[train_index]
+    
+    classifier_s.fit(X_train, y_train)
+    predicted_probas = classifier_s.predict_proba(X_test)[:, 1]
+    predicted_labels = classifier_s.predict(X_test)
 
-roc_score = roc_auc_score(y_test, predicted_probas)
-pr_score = average_precision_score(y_test, predicted_labels)
-brier_score = brier_score_loss(y_test, predicted_labels)
+    roc_score = roc_auc_score(y_test, predicted_probas)
+    roc_scores.append(roc_score)
+    print(roc_score)
 
-print("ROC: {0:9.4f} \n PR: {1:9.4f} \n Brier: {2:9.4f} \n".format(roc_score, pr_score, brier_score))
+print("ROC: {0:9.4f} \n".format(np.array(roc_scores).mean()))
 ```
 
 ```{python}
